@@ -5,6 +5,7 @@ Version 0.9
  obdsim: Initial add of socket generator [for wifi obd devices]
  obd2csv: Take --start and --end time parameters
  obd2csv: add option to gzip csv file
+ obdsim: dbus plugin work with more types on the bus
 
 Version 0.8 (released 2009-09-04)
  Put Copyright/GPL notices in all files
